style.css
/* keys // broad strokes */

html {
  background-image: linear-gradient(#a9a9a9, #a1a1a1);
  height: 100%;
  margin: 0;
  background-repeat: no-repeat;
  background-attachment: fixed;
}

#container {
  min-width: 960px;
  max-width: 1885px;
}

.keys {
  text-align: center;
  margin-top: 9%;
  font-size: 15px;
  font-family: "Lato", sans-serif;
}

.gdt {
  background-image: linear-gradient(transparent, #0d0d0d);
  background-attachment: fixed;
  background-size: cover;
  background-position: center;
}

.key-row {
  display: inline-block;
  height: 3em;
  margin: 0.2em;
}

#ptfk {
  font-family: "Lato", sans-serif;
  font-weight: 800;
  font-size: 2.8em;
  text-transform: uppercase;
  letter-spacing: 0.8em;
  text-align: center;
  color: #f7fcff;
}

#ptfk .word {
  display: inline-block;
  line-height: 2em;
}

.key-row > div[data-pressed],
.key-row > div:active {
  color: #aaa;
  position: relative;
  top: 0.2em;
  box-shadow: 0 0 0 0.05em #0a0140;
}

#ui * {
  display: inline-block;
}

#ui {
  position: fixed;
  top: 0px;
  right: 0px;
  z-index: 100;
  color: #f7fcff;
  font-size: 15px;
  font-family: "Lato", sans-serif;
  border-radius: 0.3em;
  margin: 0.3em;
  padding: 0.2em;
  width: 12em;
  box-sizing: border-box;
  border: 1px solid #e0e0d9;
  box-shadow: 0 0.2em 0 0.05em #bff205;
  border-bottom-color: #555;
}

#readMe {
  position: fixed;
  top: 2.5px;
  left: 2.5px;
  z-index: 100;
  color: #f7fcff;
  font-size: 30px;
  font-family: "Lato", sans-serif;
  border-radius: 0.3em;
  width: 1.1em;
  height: 1.06em;
  box-sizing: border-box;
  border: 1px solid #e0e0d9;
  box-shadow: 0 0.13em 0 0.022em #bff205;
  border-bottom-color: #555;
}

#readMe-icon {
  transform: rotate(180deg);
  cursor: default;
}

#readMe-text {
  visibility: hidden;
}

#readMe-icon:hover + #readMe-text {
  visibility: visible;
  position: fixed;
  background-image: linear-gradient(#a9a9a9, #0d0d0d);
  top: 1em;
  left: 1.5em;
  z-index: 100;
  color: #f7fcff;
  font-size: 15px;
  font-family: "Lato", sans-serif;
  text-transform: uppercase;
  padding-left: 0.5em;
  padding-top: 0.25em;
  border-radius: 0.3em;
  width: 18em;
  height: 8.3em;
  box-sizing: border-box;
  border: 1px solid #e0e0d9;
  box-shadow: 0 0.13em 0 0.022em #bff205;
  border-bottom-color: #555;
}

#ui-Osc {
  padding-left: 0.05em;
  text-transform: uppercase;
}

.key-row > * {
  position: relative;
  text-align: center;
  color: #f7fcff;
  float: left;
  border-radius: 0.3em;
  margin: 0.3em;
  padding: 0.2em;
  width: 3.3em;
  height: 100%;
  box-sizing: border-box;
  cursor: pointer;
  border: 1px solid #e0e0d9;
  box-shadow: 0 0.2em 0 0.05em hsl(73, 96%, 48%);
  border-bottom-color: #555;
}

/* keys // specifics */

.row-1 {
  height: 1.7em;
  line-height: 1.4em;
}

.double {
  padding-top: 0.2em;
  width: 3.62em;
  padding-right: 2em;
}

.letter {
  line-height: 2.4em;
  width: 3.63em;
  padding-right: 2em;
}

.backspacetab {
  width: 7em;
}

.capsenter {
  width: 7.4em;
}

.shift {
  width: 9.55em;
}

.stack {
  padding-top: 0.2em;
}

.bottomctrl {
  width: 6.2em;
  padding-right: 2.8em;
  padding-top: 0.8em;
}

.bottom {
  width: 4em;
  padding-right: 1.8em;
}

.space {
  width: 20.5em;
}

.word {
  padding-top: 0.8em;
}

.align-tab {
  padding-right: 4.3em;
}

.align-caps {
  padding-right: 3em;
}

.align-shiftl {
  padding-right: 6em;
}

.align-backspace {
  padding-left: 4.1em;
}

.align-enter {
  padding-left: 3em;
}

.align-shiftr {
  padding-left: 5.3em;
}

.align-esc {
  padding-right: 0.5em;
}

.arrow {
  padding-top: 0.8em;
}

.func {
  font-size: 0.7em;
  padding-left: 1.3em;
  padding-top: 0.5em;
  width: 4.97em;
}

.word-top {
  font-size: 0.8em;
  width: 4.24em;
}

.multi {
  position: absolute;
  color: hsl(73, 99%, 45%);
  padding-left: 2em;
  text-shadow: 1px 1px 8px #0000005e;
}

.multi-sharps {
  position: absolute;
  color: hsl(73, 99%, 45%);
  padding-left: 1.7em;
  text-shadow: 1px 1px 8px #0000005e;
}

